list_of_houses - created data source and tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    //Paging
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
     //Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
