--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.freelancemarcel.zatec">
+    package="com.freelancemarcel.gotown">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,9 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ice"
         tools:targetApi="31"
-        android:name=".core.IceAndFireApplication">
+        android:name="com.freelancemarcel.gotown.core.IceAndFireApplication">
         <activity
-            android:name=".MainActivity"
+            android:name="com.freelancemarcel.gotown.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Ice.Splashscreen">
