--- a/.github/workflows/distribute-debug-apk.yml
+++ b/.github/workflows/distribute-debug-apk.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v3
       - name: Setup JDK
-        uses: actions/setup-jave@v3
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
