--- a/.github/workflows/distribute-debug-apk.yml
+++ b/.github/workflows/distribute-debug-apk.yml
@@ -5,7 +5,26 @@ on:
     branches:
       - main
 jobs:
+  build-debug-apk:
+    name: Generate debug apk
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository code
+        uses: actions/checkout@v3
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - name: Build debug apk
+        run: bash ./gradlew assembleDebug --stacktrace
+      - name: Upload apk
+        uses: actions/upload-artifact@v3
+        with:
+          name: debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
   upload-debug-apk:
+    needs: build-debug-apk
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository files
