--- a/.github/workflows/distribute-debug-apk.yml
+++ b/.github/workflows/distribute-debug-apk.yml
@@ -5,7 +5,26 @@ on:
     branches:
       - main
 jobs:
+  build-debug-apk:
+    name: Generate debug apk
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository code
+        uses: actions/checkout@v3
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - name: Build debug apk
+        run: bash ./gradlew assembleDebug --stacktrace
+      - name: Upload apk
+        uses: actions/upload-artifact@v3
+        with:
+          name: debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
   upload-debug-apk:
+    needs: build-debug-apk
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository files
@@ -16,3 +35,22 @@ jobs:
           credentials: "${{secrets.sa_64}}"
           filename: "./app/build/outputs/apk/debug/*.apk"
           folderId: "${{secrets.gd_folder}}"
+  send-emails:
+    needs: upload-debug-apk
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send email
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: "${{secrets.sender_email}}"
+          password: "${{secrets.sender_email_password}}"
+          subject: "Test APK Ready"
+          from: "GoTown Developers"
+          body: |
+            Hi,
+            Kindly check google drive.
+            Regards,
+            GoTown Developers
+          to: freelancemarcel18@gmail.com
