--- a/.github/workflows/distribute-debug-apk.yml
+++ b/.github/workflows/distribute-debug-apk.yml
@@ -29,6 +29,11 @@ jobs:
     steps:
       - name: Checkout repository files
         uses: actions/checkout@v3
+      - name: Download apk
+        uses: actions/download-artifact@v3
+        with:
+          name: debug-apk
+          path: app/build/outputs/apk/debug
       - name: Upload to Google Drive
         uses: adityak74/google-drive-upload-git-action@main
         with:
